[package]
name = "cie"
version = "0.1.0"
edition = "2021"
authors = [ "Michał Szmidt" ]
repository = "https://github.com/michalszmidt/cie"
license-file = "LICENSE"
categories = ["command-line-utilities"]
readme = "README.md"
keywords = ["ics", "ical", "calendar", "icalendar"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"                                                           # Apache 2.0 / MIT
itertools = "*"                                                       # Apache 2.0 / MIT
clap = { version="*", features = ["default"] }                        # Apache 2.0 / MIT
serde = { version="*", features = ["derive"]}                        # Apache 2.0 / MIT  
serde_yaml = "*"      
rayon = "*"                                                           # Apache 2.0 / MIT
icalendar = {version = "*", features = ['parser']}
chrono = "*"
# chrono-tz = "*"
# dateparser = "*"